# FightstickOverlay

./: CMakeLists.txt  readme.md
Configs/: WASDefault.ini  default.ini  sharqo_ggst.ini
src/: main.cpp
src/App/: CApp.cpp  CApp.hpp
src/Buttons/: CButton.cpp  CButton.hpp  CStick.cpp  CStick.hpp
src/ConfigParser/: CConfigParser.cpp  CConfigParser.hpp
